2011-10-20  Leandro Pereira  <leandro@profusion.mobi>

        [EFL] Plug ImageDiff/DumpRenderTree on CMake build system
        https://bugs.webkit.org/show_bug.cgi?id=70142

        Reviewed by Gustavo Noronha Silva.

        * CMakeListsEfl.txt: Include DRT CMakeLists.
        * DumpRenderTree/efl/CMakeLists.txt: Added.

2011-10-20  Philippe Normand  <pnormand@igalia.com>

        [style] Allow usage of NULL in gst_*
        https://bugs.webkit.org/show_bug.cgi?id=70498

        Reviewed by David Levin.

        * Scripts/webkitpy/style/checkers/cpp.py: Simplified the detection
        of gst_ calls. Now just ignore NULL in all of them.
        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Test for above change.

2011-10-20  Leandro Pereira  <leandro@profusion.mobi>

        [EFL] Unreviewed. Build fix after r97043.

        * DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
        (DumpRenderTreeChrome::resetDefaultsToConsistentValues): Use ewk_view_scale_set() instead of ewk_view_page_scale().
        * DumpRenderTree/efl/EventSender.cpp:
        (scalePageByCallback): Ditto.

2011-10-20  Philippe Normand  <pnormand@igalia.com>

        Unreviewed. Adding myself to watchlists.
        * Scripts/webkitpy/common/config/watchlist:

2011-10-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Teach new-run-webkit-tests about #CRASHED and #CRASHED - WebProcess
        https://bugs.webkit.org/show_bug.cgi?id=63683

        * Scripts/webkitpy/common/net/layouttestresults.py:
        * Scripts/webkitpy/common/net/resultsjsonparser.py:
        * Scripts/webkitpy/layout_tests/layout_package/manager.py:
        * Scripts/webkitpy/layout_tests/layout_package/single_test_runner.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_failures.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_failures_unittest.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_result_writer.py: