@@ -1,5 +1,15 @@
 2011-10-20  Leandro Pereira  <leandro@profusion.mobi>
 
+        [EFL] Unreviewed DumpRenderTree build fix.
+
+        * DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
+        (LayoutTestController::addChromeInputField): Add stub.
+        (LayoutTestController::removeChromeInputField): Ditto.
+        (LayoutTestController::focusWebView): Ditto.
+        (LayoutTestController::setBackingScaleFactor): Ditto.
+
+2011-10-20  Leandro Pereira  <leandro@profusion.mobi>
+
         [EFL] Plug ImageDiff/DumpRenderTree on CMake build system
         https://bugs.webkit.org/show_bug.cgi?id=70142
 
